// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Pre-deployment validation for Azure readiness. Run deep checks on configuration, infrastructure (Bicep or Terraform), permissions, and prerequisites before deploying. After all checks pass, hand off to azure-deploy skill which executes the actual deployment commands with error recovery and verification. WHEN: validate my app, check deployment readiness, run preflight checks, verify configuration, check if ready to deploy, validate azure.yaml, validate Bicep, test before deploying, troubleshoot deployment errors, validate Azure Functions, validate function app, validate serverless deployment.",
  "extractedKeywords": [
    "actual",
    "after",
    "azure",
    "azure-deploy",
    "before",
    "bicep",
    "check",
    "checks",
    "commands",
    "configuration",
    "deep",
    "deploy",
    "deploying",
    "deployment",
    "error",
    "errors",
    "executes",
    "function",
    "functions",
    "hand",
    "infrastructure",
    "pass",
    "permissions",
    "pre-deployment",
    "preflight",
    "prerequisites",
    "readiness",
    "ready",
    "recovery",
    "serverless",
    "skill",
    "terraform",
    "test",
    "troubleshoot",
    "validate",
    "validation",
    "verification",
    "verify",
    "when",
    "which",
    "with",
    "yaml",
  ],
  "name": "azure-validate",
}
`;

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "actual",
  "after",
  "azure",
  "azure-deploy",
  "before",
  "bicep",
  "check",
  "checks",
  "commands",
  "configuration",
  "deep",
  "deploy",
  "deploying",
  "deployment",
  "error",
  "errors",
  "executes",
  "function",
  "functions",
  "hand",
  "infrastructure",
  "pass",
  "permissions",
  "pre-deployment",
  "preflight",
  "prerequisites",
  "readiness",
  "ready",
  "recovery",
  "serverless",
  "skill",
  "terraform",
  "test",
  "troubleshoot",
  "validate",
  "validation",
  "verification",
  "verify",
  "when",
  "which",
  "with",
  "yaml",
]
`;
